--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,9 @@
 
 /* General styles */
 
-/* endable this to add smooth scrolling */
-/* html {
+html {
     scroll-behavior: smooth;
-} */
-
+}
 
 body {
     background: var(--clr-light);
@@ -127,7 +125,8 @@ h3 { font-size: var(--fs-h3) }
     margin-bottom: 1em;
 }
 
-.section__subtitle--work {
+.section__subtitle--work,
+.section__subtitle--beta {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
     margin-bottom: 2em;
@@ -141,8 +140,13 @@ header {
     padding: 1em;
 }
 
-.logo {
-    max-width: 100px;
+.header__logo {
+    margin: 0;
+    font-family: var(--ff-secondary);
+    font-size: 1.3rem;
+    line-height: 1;
+    font-weight: 500;
+    letter-spacing: 1.1px;
 }
 
 .nav {
@@ -212,11 +216,6 @@ header {
     opacity: 0;
 }
 
-
-
-
-
-
 .hamburger {
     display: block;
     position: relative;
@@ -243,7 +242,6 @@ header {
 
 .hamburger::before { top: 6px; }
 .hamburger::after { bottom: 6px; }
-
 
 /*  Intro section  */
 
@@ -289,15 +287,13 @@ header {
     }
 }
 
-
-
 /*  My services section  */
 
 .my-services {
     background-color: var(--clr-dark);
     background-image: url(../img/services-bg.jpg);
     background-size: cover;
-    /* background-blend-mode: multiply; */
+    background-blend-mode: overlay;
     color: var(--clr-light);
     text-align: center;
 }
@@ -338,7 +334,6 @@ header {
         margin-left: 2em;
     }
 }
-
 
 .about-me {
     max-width: 1000px;
@@ -386,12 +381,15 @@ header {
 .my-work {
     background-color: var(--clr-dark);
     color: var(--clr-light);
-    text-align: center;    
+    text-align: center;
+    padding-bottom: 3.5rem;   
 }
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    max-width: 1470px;
+    margin: 0 auto;
 }
 
 .portfolio__item {
@@ -400,6 +398,9 @@ header {
 }
 
 .portfolio__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: 
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
@@ -414,6 +415,31 @@ header {
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.2);
     opacity: .5;
+}
+
+@media(max-width: 420px) {
+    .portfolio {
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }    
+}
+
+.section__subtitle--beta {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 2em;
+}
+
+.beta-link {
+    letter-spacing: 1.5px;
+    color: red;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+.beta-link:hover {
+    color: hotpink;
+    text-decoration: underline;
 }
 
 
