--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,12 @@ header {
     box-shadow: var(--bs);
 }
 
+.intro__img--project {
+    width: 480px;
+    height: 105%;
+    object-fit: cover;
+}
+
 .section__subtitle--intro {
     display: inline-block;
 }
@@ -501,4 +507,13 @@ header {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.project-img {
+    height: 300px;
+}
+.project-img > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
